# fastmcp-google-calendar

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  WINDSURF_INTEGRATION.md  mcp-config.json  pyproject.toml  requirements.txt  run.py  run_with_logs.py
.github/workflows/: cleanup.yml  deploy-gcp.yml
servers/google-calendar/: Dockerfile  README.md  pyproject.toml  run.py  test_booking.py  test_connectivity.py
servers/google-calendar/src/: config.py  database.py  main.py
servers/service-m8/: Dockerfile  pyproject.toml
shared/: README.md  pyproject.toml
shared/src/shared_utils/: __init__.py  config.py  database.py  logger.py
