[project]
name = "google-calendar-server"
version = "0.1.0"
description = "Google Calendar MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "shared_utils",
    "httpx",
    "supabase",
]

[tool.uv.sources]
shared_utils = { path = "../../shared", editable = true }

[project.scripts]
google-calendar-server = "google_calendar.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_calendar"]

