[project]
name = "service-m8-server"
version = "0.1.0"
description = "ServiceM8 MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "shared_utils",
    "httpx",
    "supabase",
]

[tool.uv.sources]
shared_utils = { path = "../../shared", editable = true }

[project.scripts]
service-m8-server = "service_m8.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/service_m8"]
